관리자 신고게시판 댓글 하는중

--- a/reviewProject/web/WEB-INF/classes/.gitignore
+++ b/reviewProject/web/WEB-INF/classes/.gitignore
@@ -4,3 +4,8 @@
 /memberSharedBoard/
 /memberSharedComment/
 /memberReviewComment/
+/adminShareBoard/
+/adminSharedComment/
+/adminReviewComment/
+/adminComplainComment/
+/memberComplainComment/
