상혁이형거 합친거

--- a/reviewProject/web/WEB-INF/classes/.gitignore
+++ b/reviewProject/web/WEB-INF/classes/.gitignore
@@ -1,13 +1,2 @@
-/adminReviewBoard/
-/memberComplainBoard/
-/memberReviewBoard/
-/memberSharedBoard/
-/memberSharedComment/
-/memberReviewComment/
-/adminShareBoard/
-/adminSharedComment/
-/adminReviewComment/
-/adminComplainComment/
-/memberComplainComment/
 /member/
-/adminNotice/
+/admin/
