고친거없음

--- a/reviewProject/web/WEB-INF/classes/.gitignore
+++ b/reviewProject/web/WEB-INF/classes/.gitignore
@@ -2,3 +2,10 @@
 /admin/
 /memberSharedBoard/
 /memberSharedComment/
+/adminComplainComment/
+/adminReviewComment/
+/adminShareBoard/
+/adminSharedComment/
+/memberReviewBoard/
+/memberReviewComment/
+/adminComplainBoard/
